--- a/src/2-product-headphone.html
+++ b/src/2-product-headphone.html
@@ -8,13 +8,13 @@
   </head>
 
   <body
-    class="flex h-screen items-center justify-center text-center md:text-left"
+    class="flex h-screen items-center justify-center bg-slate-100 text-center md:text-left"
   >
     <div
-      class="flex h-auto max-w-md flex-col gap-5 rounded-xl p-8 shadow-2xl md:max-w-3xl md:flex-row md:p-10"
+      class="flex max-w-md flex-col items-center gap-5 rounded-xl bg-white p-8 shadow-2xl md:max-w-3xl md:flex-row md:items-start md:p-10"
     >
       <img
-        class="w-80 rounded-xl md:h-48 md:w-auto md:pr-5"
+        class="w-60 rounded-xl duration-200 hover:scale-105 md:pr-5"
         src="assets/images/headphone.png"
         alt=""
       />
@@ -24,7 +24,7 @@
         >
           Free Shipping
         </div>
-        <h1 class="text-2xl">
+        <h1 class="text-xl font-semibold">
           Razer Kraken Kitty Edt Gaming <br />Headset Quartz
         </h1>
         <span class="text-sm line-through">$799</span>
@@ -39,8 +39,11 @@
           >
             Add to cart
           </button>
-          <div class="flex items-center text-left">
-            <span class="mr-3 text-xs">🟢</span>50+ pcs. in stock
+          <div class="flex items-center text-left text-xs">
+            <div
+              class="mr-2 h-3 w-3 rounded-full bg-green-400 hover:animate-ping"
+            ></div>
+            50+ pcs. in stock
           </div>
           <div class="flex flex-col gap-4 md:flex-row">
             <button
