--- a/src/3-photo-grid.html
+++ b/src/3-photo-grid.html
@@ -6,30 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
   </head>
-
   <body
     class="flex h-full items-center justify-center bg-slate-200 md:h-screen"
   >
     <div
-      class="shadow-w-lg flex max-w-xs flex-col rounded-xl bg-white py-5 sm:max-w-sm md:max-w-3xl lg:max-w-5xl xl:max-w-7xl"
+      class="shadow-w-lg flex max-w-xl flex-col rounded-xl bg-white py-5 md:m-10 md:max-w-none"
     >
       <div
-        class="flex flex-col gap-3 px-5 text-center text-sm sm:pt-5 md:flex-row md:justify-end md:gap-x-12 md:text-lg"
+        class="flex flex-col gap-3 px-5 text-center text-sm sm:pt-5 md:flex-row md:justify-end md:gap-x-12 md:text-lg hover:[&_a]:text-violet-600 hover:[&_a]:underline"
       >
-        <button class="hover:" type="button">Vector</button>
-        <button class="hover:" type="button">Illustrations</button>
-        <button class="hover:" type="button">Images</button>
-        <button class="hover:" type="button">Icons</button>
+        <a href="#">Vector</a>
+        <a href="#">Illustrations</a>
+        <a href="#">Images</a>
+        <a href="#">Icons</a>
       </div>
       <form
         class="flex flex-col gap-5 px-5 py-10 md:flex-row md:justify-between md:gap-0 md:pt-20"
       >
-        <input
-          class="ml-3 border-b-2 outline-none md:h-14 md:w-[480px]"
-          type="text"
-          alt="Search"
-          placeholder="Search"
-        />
+        <div class="flex h-14 w-full border-b-2 md:max-w-xs">
+          <input
+            class="ml-3 w-full outline-none"
+            type="text"
+            alt="Search"
+            placeholder="Search"
+          />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-8 text-gray-300 duration-200 hover:scale-110"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <circle cx="10" cy="10" r="7" />
+            <line x1="21" y1="21" x2="15" y2="15" />
+          </svg>
+        </div>
+
         <button
           class="w-full rounded-lg bg-black py-1 text-sm text-white md:h-14 md:w-60 md:text-xl md:font-semibold"
           type="button"
@@ -38,14 +54,14 @@
         </button>
       </form>
       <div
-        class="grid auto-rows-max gap-5 px-5 md:grid-cols-3 lg:grid-cols-4 lg:gap-5 xl:grid-cols-5 xl:gap-1"
+        class="grid auto-rows-max gap-5 px-5 md:grid-cols-3 lg:grid-cols-4 lg:gap-5 xl:grid-cols-5 xl:gap-1 [&_img]:duration-200 hover:[&_img]:scale-105"
       >
-        <img src="./assets/images/image1.jpg" alt="image1" />
+        <img src="./assets/images/image1.jpg" alt="woman" />
         <img src="./assets/images/image2.jpg" alt="window" />
-        <img src="./assets/images/image3.jpg" alt="image3" />
-        <img src="./assets/images/image4.jpg" alt="image4" />
-        <img src="./assets/images/image5.jpg" alt="image5" />
-        <img src="./assets/images/image6.jpg" alt="image6" />
+        <img src="./assets/images/image3.jpg" alt="sky" />
+        <img src="./assets/images/image4.jpg" alt="art" />
+        <img src="./assets/images/image5.jpg" alt="town" />
+        <img src="./assets/images/image6.jpg" alt="wall" />
       </div>
     </div>
   </body>
